# jupyter-a11y-testing

./: .gitignore  .gitpod.yml  .hadolint.yml  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/actions/accessibility-test-jupyterlab/: action.yml
.github/actions/build-lab/: action.yml
.github/actions/jlab-a11y-test/: action.yml
.github/actions/link-lumino/: action.yml
.github/actions/link-package/: action.yml
.github/workflows/: a11y-test.yml  accessibility-regression-test-jupyterlab.yml  accessibility-test-jupyterlab.yml  add-issues-to-project.yml  add-pr-to-project.yml  build-jupyterlab.yml  gitpod-docker.yml  jlab-a11y-test.yml  test-a11y.yml
jupyter_accessibility/: README.md  __init__.py  __main__.py  dodo.py  project.py
jupyter_accessibility/jupyter-axe/: playwright.config.ts  requirements.txt
testing/: README.md  package-lock.json  package.json  playwright.config.ts
testing/jupyterlab/: README.md  environment.yml  jupyter_server_config.py  markdown-reporter.ts  package-lock.json  package.json  playwright.config.ts
testing/jupyterlab/manual-testing-scripts/: no-tab-trap-initial-page.md  visible-focus-indicator-initial-page.md
testing/jupyterlab/regression-tests/: no-tab-trap-initial-page.test.ts
testing/jupyterlab/test-info-pages/: no-tab-trap-initial-page.md
testing/jupyterlab/tests/: axe-violations.test.ts  tab-loop-no-trap.test.ts
testing/jupyterlab/tests/regression-tests/: no-tab-trap-initial-page.test.ts  visible-focus-indicator-initial-page.test.ts
testing/scripts/: jupyterlab-testing-scripts.md  testing-script-template.md
tools/: Dockerfile  fix_permissions
