# Copyright (c) Jupyter Accessibility Development Team.
# Distributed under the terms of the Modified BSD License.
[build-system]
# needed for build-time
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-accessibility"
description = "Automated accessibility testing for Jupyter tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["jupyter", "accessibility", "JupyterLab"]
license = { file = "LICENSE" }

[tool.isort]
profile = "black"

[tool.black]
line_length = 79

[tool.pytest.ini_options]
addopts = "--nbval --sanitize-with docs/sanitize.cfg -pno:warnings --cov=schemin"
