# Copyright (c) Jupyter Accessibility Development Team.
# Distributed under the terms of the Modified BSD License.
[build-system]
# needed for build-time
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-a11y-tests"
description = "Set of automated accessibility tests for JupyterLab"
version = "1.0.0"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    { name = "Tania Allard", email = "tania@bitsandchips.me" },
    { name = "Gabriel Fouasnon", email = "gabriel@fouasnon.com" }
]
keywords = ["jupyter", "jupyterlab", "accessibility", "a11y", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: 4"
]

[project.urls]
Repository = "https://github.com/Quansight-Labs/jupyter-a11y-testing"
Issues = "https://github.com/Quansight-Labs/jupyter-a11y-testing/issues"

[tool.isort]
profile = "black"

[tool.black]
line_length = 79

[tool.pytest.ini_options]
addopts = "--nbval --sanitize-with docs/sanitize.cfg -pno:warnings --cov=schemin"

[tool.hatch]

[tool.ruff]
builtins = ["c"]
# E501 Line too long (158 > 100 characters)
# D400: First line should end with a period
# F401: Imported but unused
# F841: Local variable is assigned to but never used
ignore = ["D400", "F401", "F841", "E501"]
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
# A: builtins
# F: Pyflakes
# E,W: pycodestyle
# C4: flake8-comprehensions
# D: pydocstyle
select = ["A", "B", "C", "C4", "C9", "D", "E", "F", "W", "ICN"]

[tool.ruff.pydocstyle]
convention = "google"
