[metadata]
name = jupyter-accessibility
description = "Automated accessibility testing for Jupyter tools"
long_description = file: README.md
long_description_content_type = text/markdown
license= file: LICENSE
author = "Jupyter Development Team"
keywords = ["jupyter", "accessibility", "JupyterLsab"]
classifiers = ["Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: Implementation :: CPython",
"Programming Language :: Python",
"Framework :: Jupyter",
"License :: OSI Approved :: BSD License",
]
requires-python = ">=3.8"

[options]
install_requires =
packages =

[options.extras_require]
doc =
test =
hypothesis_jsonschema
pytest
pytest-cov
nbval
hypothesis
